--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.testjava</groupId>
-	<artifactId>test-java</artifactId>
+	<groupId>com.test_java</groupId>
+	<artifactId>test_java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>test-java</name>
+	<name>test_java</name>
 	<description>test project</description>
 	<properties>
 		<java.version>1.8</java.version>
