--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.test_java</groupId>
+	<groupId>com.swati</groupId>
 	<artifactId>test_java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>test_java</name>
